fixed li alignment

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,8 @@ body {
 .media-list li {
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
 }
 
 .expand {
